nginxapp/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata: 
      labels:
        app: nginx-app    
    spec:
      volumes:
        - name: tls-volume
          secret:
            secretName: nginx-cert
        - name: nginx-config-volume
          configMap:
            name: custom-nginx-config    
        - name: nginx-index-volume
          configMap:
            name: nginx-index
      containers:
        - name: nginx
          image: nginx:latest 
          volumeMounts:
            - name: tls-volume
              mountPath: /etc/nginx/ssl
              readOnly: true
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-index-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
