nginxapp/nginx-svc-cm.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-cm
spec:
  selector:
    app: nginx-app-cm
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
